IE dimension labels aligning fixed

--- a/src/styles/qlik-heatmap-chart.less
+++ b/src/styles/qlik-heatmap-chart.less
@@ -93,7 +93,3 @@
     stroke: SlateGray;
     stroke-width: 2px;
 }
-
-.axis-dim-b{
-  transform: rotate(-90deg);
-}
